--- a/app/src/main/res/drawable/bg_shape_google.xml
+++ b/app/src/main/res/drawable/bg_shape_google.xml
@@ -6,4 +6,8 @@
     <solid
         android:color="@color/white">
     </solid>
+    <stroke
+        android:width="2dp"
+        android:color="@color/grey_700">
+    </stroke>
 </shape>
