--- a/app/src/main/res/layout/activity_intro3.xml
+++ b/app/src/main/res/layout/activity_intro3.xml
@@ -26,6 +26,7 @@
         android:textColor="@color/blue_500"
         android:textSize="32sp"
         android:textStyle="bold"
+        android:fontFamily="@font/poppins_semibold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -39,6 +40,7 @@
         android:text="@string/intro3_desc"
         android:textColor="@color/blue_500"
         android:textSize="18sp"
+        android:fontFamily="@font/poppins_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -60,6 +62,7 @@
         android:text="@string/get_started"
         android:textSize="22sp"
         android:textAllCaps="false"
+        android:fontFamily="@font/poppins_semibold"
         android:paddingVertical="8dp"
         android:background="@drawable/bg_shape_get_started"
         app:layout_constraintBottom_toBottomOf="parent"
