--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -45,7 +45,8 @@
                         android:text="@string/user_completed_task"
                         android:textColor="@color/white"
                         android:textSize="22dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:fontFamily="@font/poppins_medium" />
                 </LinearLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
