--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -28,6 +28,7 @@
             android:textColor="@color/blue_500"
             android:textSize="36sp"
             android:textStyle="bold"
+            android:fontFamily="@font/poppins_semibold"
             app:layout_constraintBottom_toTopOf="@id/et_email_in"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -39,6 +40,7 @@
             android:layout_marginBottom="24dp"
             android:hint="Email"
             android:inputType="textEmailAddress"
+            android:fontFamily="@font/poppins_medium"
             app:layout_constraintBottom_toTopOf="@id/et_password_in"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -51,6 +53,7 @@
             android:layout_marginBottom="32dp"
             android:hint="@string/password"
             android:inputType="textPassword"
+            android:fontFamily="@font/poppins_medium"
             app:layout_constraintBottom_toTopOf="@+id/btn_google_signin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -98,6 +101,7 @@
             android:textColor="@color/white"
             android:textSize="24dp"
             android:textStyle="bold"
+            android:fontFamily="@font/poppins_semibold"
             app:layout_constraintBottom_toTopOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -109,6 +113,7 @@
             android:gravity="center_vertical"
             android:text="@string/doesn_t_have_an_account"
             android:textSize="18dp"
+            android:fontFamily="@font/poppins_medium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -121,6 +126,7 @@
             android:textSize="18dp"
             android:textColor="@color/blue_500"
             android:textStyle="bold"
+            android:fontFamily="@font/poppins_semibold"
             android:clickable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView2" />
