--- a/app/src/main/res/layout/add_task_popup.xml
+++ b/app/src/main/res/layout/add_task_popup.xml
@@ -27,6 +27,7 @@
             android:textColor="@color/black"
             android:textSize="24dp"
             android:textStyle="bold"
+            android:fontFamily="@font/poppins_semibold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -37,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:hint="@string/add_title"
+            android:fontFamily="@font/poppins_medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_add_task" />
@@ -46,11 +48,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:fontFamily="@font/poppins_medium"
             android:clickable="false"
             android:cursorVisible="false"
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:hint="@string/add_date"
+            android:drawableRight="@drawable/ic_round_date_range_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_add_title" />
@@ -60,11 +64,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:fontFamily="@font/poppins_medium"
             android:clickable="false"
             android:cursorVisible="false"
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:hint="@string/add_time"
+            android:drawableRight="@drawable/ic_round_access_time_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_add_date" />
@@ -78,6 +84,7 @@
             android:textColor="@color/blue_500"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:fontFamily="@font/poppins_semibold"
             android:clickable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -90,6 +97,7 @@
             android:text="@string/cancel"
             android:textColor="@color/blue_500"
             android:textSize="20sp"
+            android:fontFamily="@font/poppins_medium"
             android:clickable="true"
             android:layout_marginRight="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
