--- a/app/src/main/res/layout/delete_task_popup.xml
+++ b/app/src/main/res/layout/delete_task_popup.xml
@@ -27,6 +27,7 @@
             android:text="Are you sure to delete this task?"
             android:textColor="@color/black"
             android:textSize="24dp"
+            android:fontFamily="@font/poppins_medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
