--- a/app/src/main/res/layout/example_widget.xml
+++ b/app/src/main/res/layout/example_widget.xml
@@ -13,7 +13,8 @@
         android:text="Today Tasks"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="24sp"/>
+        android:textSize="24sp"
+        android:fontFamily="@font/poppins_semibold"/>
 
     <FrameLayout
         android:layout_marginTop="16dp"
@@ -33,7 +34,8 @@
             android:gravity="center"
             android:text="You have no today tasks"
             android:textColor="@android:color/black"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:fontFamily="@font/poppins_medium"/>
 
     </FrameLayout>
 
