--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -30,7 +30,8 @@
                 android:text="@string/user_completed_task"
                 android:textColor="@color/white"
                 android:textSize="22dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:fontFamily="@font/poppins_semibold"/>
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
