--- a/app/src/main/res/layout/example_widget.xml
+++ b/app/src/main/res/layout/example_widget.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/btn_refresh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Today Tasks"
