--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bg_shape_signup"
         android:elevation="60dp"
-        android:paddingVertical="36dp"
+        android:paddingVertical="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -54,82 +54,100 @@
             android:hint="@string/password"
             android:inputType="textPassword"
             android:fontFamily="@font/poppins_medium"
-            app:layout_constraintBottom_toTopOf="@+id/btn_google_signin"
+            app:layout_constraintBottom_toTopOf="@+id/container_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <ImageView
-            android:id="@+id/btn_google_signin"
-            android:layout_width="wrap_content"
-            android:layout_height="66dp"
-            android:layout_marginHorizontal="40dp"
-            android:layout_marginBottom="50dp"
-            android:background="@drawable/bg_shape_google"
-            android:clickable="true"
-            android:elevation="6dp"
-            android:paddingHorizontal="56dp"
-            android:paddingVertical="16dp"
-            android:src="@drawable/ic_google"
-            app:layout_constraintBottom_toTopOf="@+id/textView2"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/spinner_signin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="true"
-            app:indicatorColor="@color/blue_500"
             android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@+id/btn_signin"
+            app:indicatorColor="@color/blue_500"
+            app:layout_constraintBottom_toTopOf="@+id/container_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/btn_signin"
-            android:layout_width="wrap_content"
-            android:layout_height="66dp"
+        <LinearLayout
+            android:id="@+id/container_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:orientation="horizontal"
             android:layout_marginHorizontal="40dp"
-            android:layout_marginBottom="50dp"
-            android:background="@drawable/bg_shape_signup_btn"
-            android:clickable="true"
-            android:drawableRight="@drawable/ic_signup_arrow"
-            android:drawablePadding="8dp"
-            android:elevation="6dp"
-            android:padding="16dp"
-            android:text="Sign In"
-            android:textColor="@color/white"
-            android:textSize="24dp"
-            android:textStyle="bold"
-            android:fontFamily="@font/poppins_semibold"
-            app:layout_constraintBottom_toTopOf="@+id/textView2"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintBottom_toTopOf="@+id/container"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-        <TextView
-            android:id="@+id/textView2"
+            <ImageView
+                android:id="@+id/btn_google_signin"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="8dp"
+                android:layout_weight="1"
+                android:background="@drawable/bg_shape_google"
+                android:clickable="true"
+                android:elevation="6dp"
+                android:paddingHorizontal="56dp"
+                android:paddingVertical="16dp"
+                android:src="@drawable/ic_google" />
+
+            <TextView
+                android:id="@+id/btn_signin"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:background="@drawable/bg_shape_signup_btn"
+                android:clickable="true"
+                android:drawableRight="@drawable/ic_signup_arrow"
+                android:drawablePadding="8dp"
+                android:elevation="6dp"
+                android:fontFamily="@font/poppins_semibold"
+                android:padding="16dp"
+                android:text="Sign In"
+                android:textColor="@color/white"
+                android:textSize="24dp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:gravity="center_vertical"
-            android:text="@string/doesn_t_have_an_account"
-            android:textSize="18dp"
-            android:fontFamily="@font/poppins_medium"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-        <TextView
-            android:id="@+id/btn_go_signup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="Sign Up"
-            android:textSize="18dp"
-            android:textColor="@color/blue_500"
-            android:textStyle="bold"
-            android:fontFamily="@font/poppins_semibold"
-            android:clickable="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView2" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="@string/doesn_t_have_an_account"
+                android:textSize="18dp"
+                android:layout_marginEnd="4dp"
+                android:fontFamily="@font/poppins_medium"/>
+
+            <TextView
+                android:id="@+id/btn_go_signup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:fontFamily="@font/poppins_semibold"
+                android:text="Sign Up"
+                android:textColor="@color/blue_500"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
