--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_anchorGravity="bottom|center"
-    tools:context=".HomeActivity">
+    tools:context=".ui.HomeActivity">
 
     <FrameLayout
         android:id="@+id/layout_frame_his"
