--- a/app/src/main/res/layout/activity_intro2.xml
+++ b/app/src/main/res/layout/activity_intro2.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/green_intro"
     android:padding="32dp"
-    tools:context=".intro.Intro1Activity">
+    tools:context=".ui.intro.Intro1Activity">
 
     <ImageView
         android:id="@+id/imageView"
